--- a/mathgame/views/help.html
+++ b/mathgame/views/help.html
@@ -1,14 +1,14 @@
 <html ng-app='my-app'>
 
   <head>
-    <title>Math Game</title>
+    <title>How To Play</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'></link>
-    <link rel='stylesheet' href='assets/stylesheets/styles.css'></link>
+    <link rel='stylesheet' href='../assets/stylesheets/styles.css'></link>
   </head>
 
   <body>
 
-    <ng-include src="'header.html'"></ng-include>
+    <ng-include src="'../header.html'"></ng-include>
 
     <h1 class='text-center'>How To Play</h1>
 
@@ -35,15 +35,15 @@
 
     </div>
 
-    <ng-include src="'footer.html'"></ng-include>
+    <ng-include src="'../footer.html'"></ng-include>
     
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-    <script src='scripts/app.js'></script>
-    <script src='scripts/controllers/navController.js'></script>
-    <script src='scripts/controllers/helpController.js'></script>
+    <script src='../scripts/app.js'></script>
+    <script src='../scripts/controllers/navController.js'></script>
+    <script src='../scripts/controllers/helpController.js'></script>
 
   </body>
   
