--- a/mathgame/views/related.html
+++ b/mathgame/views/related.html
@@ -3,12 +3,12 @@
   <head>
     <title>More Games</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='assets/stylesheets/styles.css'></link>
+    <link rel='stylesheet' href='../assets/stylesheets/styles.css'></link>
   </head>
 
   <body>
 
-    <ng-include src="'header.html'"></ng-include>
+    <ng-include src="'../header.html'"></ng-include>
     
     <h1 class='text-center'>More Games by the developer</h1>
     
@@ -56,8 +56,8 @@
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-    <script src='scripts/app.js'></script>
-    <script src='scripts/controllers/navController.js'></script>
+    <script src='../scripts/app.js'></script>
+    <script src='../scripts/controllers/navController.js'></script>
     
   </body>
   
