--- a/mathgame/views/help.html
+++ b/mathgame/views/help.html
@@ -1,4 +1,4 @@
-<html ng-app='my-app'>
+<html ng-app='mathGame'>
 
   <head>
     <title>How To Play</title>
@@ -12,36 +12,42 @@
 
     <h1 class='text-center'>How To Play</h1>
 
-    <div id='game-help' ng-controller='helpController'>
-      <p>In this math game, you are given two expressions. Your objective is to compare the two expressions.
-      Determine if the first expression is larger, equal to or less than the second expression.</p>
-      <div class='exp-block'>
-        <div class='exp1 example'>4 + 5</div>
-        <div class='exp2 example'>1 + 3</div>
-      </div>
+    <main id='help-block' ng-controller='helpController'>
+    
+      <div id='game-help'>
+        <p>In this math game, you are given two expressions. Your objective is to compare the two expressions.
+        Determine if the first expression is larger, equal to or less than the second expression.</p>
+        <div class='exp-block'>
+          <div class='exp1 example'>4 + 5</div>
+          <div class='exp2 example'>1 + 3</div>
+        </div>
 
-      <p>In this case, the first expression is greater. Click the greater than button.</p>
-      <div class='exp-block'>
-        <div class='exp1 example'>2 + 4</div>
-        <div class='exp2 example'>5 + 1</div>
-      </div>
-      <p> Here, both expressions equal 6. You click on the equals button</p>
-      <div class='exp-block'>
-        <div class='exp1 example'>2 + 1</div>
-        <div class='exp2 example'>3 + 7</div>
-      </div>
+        <p>In this case, the first expression is greater. Click the greater than button.</p>
+        <div class='exp-block'>
+          <div class='exp1 example'>2 + 4</div>
+          <div class='exp2 example'>5 + 1</div>
+        </div>
+        <p> Here, both expressions equal 6. You click on the equals button</p>
+        <div class='exp-block'>
+          <div class='exp1 example'>2 + 1</div>
+          <div class='exp2 example'>3 + 7</div>
+        </div>
 
-      <p>The left hand expression is lower than the right hand expression. Click less than</p>
+        <p>The left hand expression is lower than the right hand expression. Click less than</p>
 
-    </div>
+      </div>
+      
+    </main>
 
     <ng-include src="'../footer.html'"></ng-include>
     
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <script src='../scripts/app.js'></script>
+    <script src='../scripts/services/game.js'></script>
     <script src='../scripts/controllers/navController.js'></script>
     <script src='../scripts/controllers/helpController.js'></script>
 
