--- a/mathgame/views/related.html
+++ b/mathgame/views/related.html
@@ -1,4 +1,4 @@
-<html ng-app='my-app'>
+<html ng-app='mathGame'>
 
   <head>
     <title>More Games</title>
@@ -55,6 +55,7 @@
     
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
+		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
     <script src='../scripts/app.js'></script>
     <script src='../scripts/controllers/navController.js'></script>
