--- a/mathgame/views/scores.html
+++ b/mathgame/views/scores.html
@@ -1,4 +1,4 @@
-<html ng-app='my-app'>
+<html ng-app='mathGame'>
 
   <head>
     <title>High Scores</title>
@@ -35,6 +35,7 @@
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
+		<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <script src='../scripts/app.js'></script>
     <script src='../scripts/services/game.js'></script>
